# Calico

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  setup.py
scripts/: build-python.sh
src/calico/: CMakeLists.txt  __init__.py
src/calico/native/: CMakeLists.txt  calico.cpp
src/calico/test/: python_bindings_test.py  python_utils_test.py
src/calico/utils/: utils.py
