[build-system]
requires = [
  "setuptools",
  "build",
  "pybind11[global]>=2.11.1",
  "ninja",
  "auditwheel",
  "cmake>=3.12"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]

[tool.cibuildwheel]
test-command = "python -m unittest src.calico.test"

[project]
name = "calico"
version = "0.1.1"
description="A visual-inertial calibration library designed for rapid problem construction and debugging."
readme = "README.md"
authors = [
  {name = "James Yang", email = "james.yang92@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Programming Language :: Python",
]
requires-python = ">= 3.10"
dependencies = [
  'numpy == 1.26.0',
  "opencv-python-headless == 4.8.0.74",
  "pyyaml",
]

[project.optional-dependencies] # Optional
test = [
  "scipy",
  "pytest"
]


[project.urls]
"Homepage" = "https://github.com/yangjames/Calico.git"

